# cyberwave-cli

./: .gitignore  AUTHENTICATION.md  DEV_TODO.md  README copy.md  README.md  __pyinstaller_entry.py  build.sh  install.py  pyproject.toml
cyberwave_cli/: __init__.py  _version.py  asset_resolver.py  auth.py  config.py  config_validator.py  core.py  credentials.py  device_utils.py  fingerprint.py  install_docker.sh  interactive_select.py  io_utils.py  macos.py  main.py  monitor.py  pip_registry.py  utils.py
docs/: ARCHITECTURE.md  CONNECTIVITY_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_SYSTEM_IMPLEMENTATION.md  EDGE_NODE_CONNECTIVITY_SPEC.md  device-flow-api.md  edge-config.md  local_testing_best_practices.md
examples/: 01-check-dependencies.sh  02-install-dependencies.sh  03-discover-cameras.sh  04-create-environment.sh  05-register-camera.sh  06-start-motion-detection.sh  07-monitor-cameras.sh  README.md  authenticated-registration.sh  complete-api-registration.sh  complete-auto-registration.sh  diagnose-nvr-connection.sh  direct-backend-registration.sh  end-to-end-device-registration.sh  end-to-end-nvr-workflow.sh  fixed-backend-registration.sh  interactive-registration.sh  manual-frontend-registration.sh  simple-camera-workflow.sh  standalone-node-registration.sh  standalone-video-proxy-test.py  start-video-proxy.sh  test-connectivity.sh  test-dependency-system.sh  test-device-registration.sh  test-live-cameras.sh  test-nvr-streams.sh  test-uniview-cameras.py  test-uniview-nvr.sh  verify-all-cameras.py  worker_lifecycle_demo.py  working-registration.sh
scripts/: install-local-cli-mac.sh  start-local-cloud-node-mac.sh  test_deb_package.sh
tests/: _core_module_loader.py  test_camera_mapping.py  test_cli_main_selfcheck.py  (+32 more)
(+49 files in other folders)
